--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.12.0",
+    "browser-monads": "^1.0.0",
     "dotenv": "^8.2.0",
     "gatsby": "^3.4.0",
     "gatsby-image": "^3.4.0",
